# librotaryencoder

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: example_avr.c
include/rotaryencoder/: common.h  debounced_encoder.h  simple_encoder.h
src/: debounced_encoder_full_step.c  debounced_encoder_full_step_tt.c  debounced_encoder_half_step.c  debounced_encoder_half_step_tt.c  encoder_internal_update_tt.c  simple_encoder_full_step.c  simple_encoder_full_step_tt.c  simple_encoder_half_step.c  simple_encoder_half_step_tt.c
test/: compare_tt_test.c  cplusplus_test.cpp  debounced_encoder_full_step_test.c  debounced_encoder_half_step_test.c  simple_encoder_full_step_test.c  simple_encoder_half_step_test.c
